--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "axios": "^1.8.1",
+    "react-router-dom": "^7.2.0",
+    "socket.io-client": "^4.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,4 +39,5 @@
       "last 1 safari version"
     ]
   }
+  
 }
